traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:13: error: '(' expected but '{' found.
      else if {(etat==(-1)){k-=1;} 
              ^